Changed mistakes and vefiry previous homework with eslint

--- a/HW7_ts_basics/package.json
+++ b/HW7_ts_basics/package.json
@@ -19,8 +19,12 @@
   "description": "## This lesson covers the following topics:",
   "main": "index.js",
   "scripts": {
-    "test": "test"
-  },
+  "lint": "eslint .",
+  "build": "npm run lint && tsc --build"
+},
   "author": "Maks Sloboda",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "-": "^0.0.1"
+  }
 }
