--- a/HW14_API_Framework/package.json
+++ b/HW14_API_Framework/package.json
@@ -18,6 +18,7 @@
     "@types/sinon-chai": "^4.0.0",
     "axios": "^1.4.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
     "eslint-plugin-unicorn": "^56.0.1",
     "flatted": "^3.3.3",
     "sinon": "^19.0.2",
@@ -41,7 +42,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "esrun": "^3.2.26",
     "globals": "^15.15.0",
-    "jest": "^29.6.0",
+    "jest": "^29.7.0",
     "mocha": "^11.1.0",
     "prettier": "3.4.2",
     "ts-jest": "^29.1.0",
