--- a/Final_Project/.github/workflows/test.yml
+++ b/Final_Project/.github/workflows/test.yml
@@ -1,35 +1,46 @@
-name: Run Tests
+name: Run Cucumber Tests and Generate Allure Report
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Run tests
-        run: npm run test
+      - name: Run API tests
+        run: npm run test:api -- --format json:reports/api-report.json
 
-      - name: Upload Test Report
-        if: always()
+      - name: Run Integration tests
+        run: npm run test:integration -- --format json:reports/integration-report.json
+
+      - name: Generate Allure Report
+        run: |
+          npm run report:generate
+
+      - name: Upload Allure Report Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: test-report
-          path: reports/html
+          name: allure-report
+          path: allure-report
+
+      - name: Publish Allure Report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        if: github.ref == 'refs/heads/main'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: allure-report
