--- a/Final_Project/package.json
+++ b/Final_Project/package.json
@@ -10,6 +10,10 @@
     "test:contract": "cucumber-js --config cucumber.mjs --tags \"@contract\"",
     "test:integration": "cucumber-js --config cucumber.mjs --tags \"@integration\"",
     "report": "node ./reporter.js",
+    "report:allure:generate": "npx allure generate allure-results --clean -o allure-report",
+    "report:allure:open": "npx allure open allure-report",
+    "report:generate": "allure generate allure-results --clean -o allure-report",
+    "report:open": "allure open allure-report",
     "posttest": "npm run report"
   },
   "author": "",
@@ -29,6 +33,8 @@
     "globals": "^15.14.0",
     "multiple-cucumber-html-reporter": "^3.9.2",
     "prettier": "^3.5.0",
+    "allure-commandline": "^2.20.1",
+    "allure-cucumberjs": "^2.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0"
